--- a/test/generator-default.css
+++ b/test/generator-default.css
@@ -1,6 +1,7 @@
 .row {
   display: block;
-  margin: -10px; }
+  margin-top: -20px;
+  margin-left: -20px; }
   .row:after {
     content: "";
     display: table;
@@ -12,7 +13,8 @@
   vertical-align: top;
   margin-right: -0.31em;
   width: 8.33333%;
-  padding: 10px;
+  padding-top: 20px;
+  padding-left: 20px;
   margin-left: 0%; }
 
 .col-1 {
